--- a/newblog/templates/blog/post_list.html
+++ b/newblog/templates/blog/post_list.html
@@ -1,22 +1,12 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>New Blog</title>
-		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-	</head>
-	<body>
-		<div class="page-title">
-			<h1>My New Blog</h1>
-		</div>
-		<div class="articles">
-			{% for post in posts %}
-				<article>
-					<a href=""><h2>{{ post.title }}</h2></a>
-					<h5>{{ post.published_date }}</h5>
-					<p>{{ post.text|linebreaksbr }}</p>
-				</article>
-			{% endfor %}
-		</div>
-	</body>
-</html>
+{% extends 'newblog/base.html' %}
+{% block content %}
+	<div class="articles">
+		{% for post in posts %}
+			<article>
+				<a href=""><h2>{{ post.title }}</h2></a>
+				<h5>{{ post.published_date }}</h5>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</article>
+		{% endfor %}
+	</div>
+{% endblock %}
