Fix previous erro

--- a/newblog/templates/blog/post_list.html
+++ b/newblog/templates/blog/post_list.html
@@ -1,4 +1,4 @@
-{% extends 'newblog/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 	<div class="articles">
 		{% for post in posts %}
